--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "tailwindcss": "^4.0.0"
     },
     "dependencies": {
+        "datatables.net-dt": "^2.3.3",
         "sweetalert2": "^11.22.5"
     }
 }
